--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav ul {
 }
 
 main {
-    background-image: url("images/Outfitje vintage achtergrond.jpg");
+    background-image: url("images/outfitje-vintage-achtergrond.jpg");
     background-color: #cccccc;
 }
 
